--- a/coverletter-frontend/package.json
+++ b/coverletter-frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.3.0",
     "framer-motion": "^12.19.1",
     "next": "15.3.4",
     "react": "^19.0.0",
