--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,13 +5,15 @@ python-multipart==0.0.6
 slowapi==0.1.9
 
 # AI and ML
-langchain-anthropic==0.1.0
-langgraph==0.0.40
+langchain-anthropic
+langchain-core
+langchain-community
+langgraph
 anthropic>=0.16.0
 
 # Data processing
-pydantic==2.5.0
-pydantic-settings==2.1.0
+pydantic
+pydantic-settings
 PyPDF2==3.0.1
 
 # Caching and storage
